# pylon_simple_camera

./: CMakeLists.txt  README.md  package.xml
config/: pylon_camera_settings.yaml  tags.yaml  tags_bundle.yaml  tags_recursive.yaml
config/calibration/: camera_calibration_2022-07-14-11-40-49_1280x960_color-camchain.yaml  camera_calibration_60fps_rgb_2022-06-01-16-05-33-camchain.yaml
config/calibration/2022-06-01/: camera_calibration_10fps_rgb_2022-06-01-14-34-59-camchain.yaml
config/calibration/2022-07-14_01/: camera_calibration_2022-07-14-12-32-38_640x480_color-camchain.yaml
config/calibration/2022-07-14_02/: camera_calibration_2022-07-14-16-58-26_640x480_mono-camchain.yaml  camera_calibration_2022-07-14-17-01-51_1280x960_mono-camchain.yaml
config/calibration/2022-07-21/: camera_calibration_2022-07-22-11-23-46_640x480_mono-camchain.yaml
launch/: launch_image_proc.launch  launch_image_proc_and_tag.launch  launch_image_proc_and_tag_no_ds.launch  launch_image_proc_debayer.launch  launch_pylon_camera.launch  launch_pylon_camera_calibration.launch
src/: pylon_simple_camera_node.cpp
